--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "git.ignoreLimitWarning": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnType": true
+  "editor.formatOnType": true,
+  "liveServer.settings.port": 5501
 }
